tests/sksl/errors/SelfReferentialInitializerExpression.glsl
### Compilation failed:

error: 2: unknown identifier 'x'
void func() { float x = foo(x); }
                            ^
1 error
